# cosmos-db-nosql-rust-quickstart

./: azure.yaml  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: azure-dev.yml
infra/: main.bicep
src/: Cargo.toml  Dockerfile
src/app/: cosmos.rs  item.rs  main.rs
src/static/: index.html  main.js
