[[bin]]
name = "app-main"
path = "app/main.rs"

[package]
name = "azure-cosmos-db-nosql-rust-quickstart"
edition = "2021"

[dependencies]
azure_data_cosmos = { git = "https://github.com/Azure/azure-sdk-for-rust.git" }
azure_identity = { git = "https://github.com/Azure/azure-sdk-for-rust.git" }
dotenv = "0.15.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"
socketioxide = "0.15.1"
axum = "0.7.7"
tower = "0.5.1"
tower-http = { version = "0.5.0", features = ["cors", "fs"] }