[[bin]]
name = "app-main"
path = "app/main.rs"

[package]
name = "azure-cosmos-db-nosql-rust-quickstart"
edition = "2021"

[dependencies]
axum = "0.7.7"
azure_data_cosmos = { git = "https://github.com/Azure/azure-sdk-for-rust.git", package = "azure_data_cosmos" } 
azure_identity = { git = "https://github.com/Azure/azure-sdk-for-rust.git", package = "azure_identity" } 
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
socketioxide = "0.15.1"
tokio = { version = "1.41.1", features = ["rt", "net", "rt-multi-thread", "macros"] }
tower = "0.5.1"
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
