[[bin]]
name = "app-main"
path = "app/main.rs"

[package]
name = "azure-cosmos-db-nosql-rust-quickstart"
edition = "2021"

[dependencies]
axum = "0.7.7"
azure_data_cosmos = "0.22.0"
azure_identity = "0.22.0"
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
socketioxide = "0.15.1"
tokio = { version = "1.41.1", features = ["rt", "net", "rt-multi-thread", "macros"] }
tower = "0.5.1"
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
